3단계 - 요금 정책 추가 (#334)
* refactor: 긴 조건문을 메서드로 추출

https://github.com/next-step/atdd-subway-fare/pull/328#discussion_r1138618812

* refactor: 리터럴 상수 추가

https://github.com/next-step/atdd-subway-fare/pull/328#discussion_r1138648537

* refactor: 템플릿 메서드 패턴을 이용한 중복 제거

https://github.com/next-step/atdd-subway-fare/pull/328#discussion_r1138666771

* refactor: 문서에서 요금조회를 하나의 API로 합침

https://github.com/next-step/atdd-subway-fare/pull/328#discussion_r1138673492

* refactor: 개발자가 아닌 사람도 인수테스트를 이해하기 쉽게 한글로 변경

https://github.com/next-step/atdd-subway-fare/pull/328#discussion_r1138674351

* update: Section, SectionEdge에 Equals and Hashcode 추가

* add: 노선별 추가요금 인수테스트 추가

* update: Line에 노선별 추가요금 필드 추가

* update: Line에 Equals and Hashcode 추가

* update: Domain 에 Equals, Hashcode 추가

* update: 인수테스트 오류 수정

* update: Line 생성 시 ExtraFare를 추가하도록 변경

* update: EqualsAndHashCode 오류 수정을 위해 setEdgeWieght에서 sectionEdge를 전달하도록 변경

* update: Fare 계산 로직 추가

* update: static 메서드를 일반 메서드로 변경

* update: 가독성을 위한 줄바꿈

* update: 책임연쇄 패턴을 이용하여 요금정책 수정

* update: 로그인 사용자의 요금계산 인수테스트 추가

* update: 로그인한 사용자와 라인 추가요금에 대한 요금계산 단위테스트 추가

* update: 요금 계산 시 로그인 한 사용자의 요금을 계산할 수있도록 로직 변경

* update: import 최적화, reformat codes