@@ -3,27 +3,27 @@ package nextstep.subway.utils;
 import nextstep.member.domain.Member;
 import nextstep.member.domain.MemberRepository;
 import nextstep.member.domain.RoleType;
-import org.springframework.context.annotation.Profile;
 import org.springframework.stereotype.Component;
 import org.springframework.test.context.ActiveProfiles;
 
 import java.util.Arrays;
+import java.util.List;
 
 @ActiveProfiles("test")
 @Component
 public class DataLoader {
-    private MemberRepository memberRepository;
+    private final MemberRepository memberRepository;
 
     public DataLoader(MemberRepository memberRepository) {
         this.memberRepository = memberRepository;
     }
 
     public void loadData() {
-        memberRepository.save(new Member("admin@email.com", "password", 20, Arrays.asList(RoleType.ROLE_ADMIN.name())));
-        memberRepository.save(new Member("member@email.com", "password", 20, Arrays.asList(RoleType.ROLE_MEMBER.name())));
-        memberRepository.save(new Member(GithubResponses.사용자1.getEmail(), "password", 20, Arrays.asList(RoleType.ROLE_MEMBER.name())));
-        memberRepository.save(new Member(GithubResponses.사용자2.getEmail(), "password", 20, Arrays.asList(RoleType.ROLE_MEMBER.name())));
-        memberRepository.save(new Member(GithubResponses.사용자3.getEmail(), "password", 20, Arrays.asList(RoleType.ROLE_MEMBER.name())));
-        memberRepository.save(new Member(GithubResponses.사용자4.getEmail(), "password", 20, Arrays.asList(RoleType.ROLE_MEMBER.name())));
+        memberRepository.save(new Member("admin@email.com", "password", 20, List.of(RoleType.ROLE_ADMIN.name())));
+        memberRepository.save(new Member("member@email.com", "password", 20, List.of(RoleType.ROLE_MEMBER.name())));
+        memberRepository.save(new Member(GithubResponses.사용자1.getEmail(), "password", 20, List.of(RoleType.ROLE_MEMBER.name())));
+        memberRepository.save(new Member(GithubResponses.사용자2.getEmail(), "password", 20, List.of(RoleType.ROLE_MEMBER.name())));
+        memberRepository.save(new Member(GithubResponses.사용자3.getEmail(), "password", 20, List.of(RoleType.ROLE_MEMBER.name())));
+        memberRepository.save(new Member(GithubResponses.사용자4.getEmail(), "password", 20, List.of(RoleType.ROLE_MEMBER.name())));
     }
 }
